--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link btn m-1" href="/">Home</a>
+                <a class="nav-link btn" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn m-1" href="/">Technology</a>
+                <a class="nav-link btn" href="/">Technology</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn m-1" href="/">Applications</a>
+                <a class="nav-link btn" href="/">Applications</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link btn m-1" href="/" data-toggle="dropdown">
+                <a class="nav-link btn" href="/" data-toggle="dropdown">
                     About Us
                 </a>
-                <div class="dropdown-menu m-1">
+                <div class="dropdown-menu">
                     <a class="dropdown-item btn btn-sub" href="/">History</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item btn btn-sub" href="/">AU Team</a>
@@ -47,7 +47,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn m-1" href="/">Contact</a>
+                <a class="nav-link btn" href="/">Contact</a>
             </li>
         </ul>
     </nav>
