--- a/index.html
+++ b/index.html
@@ -81,15 +81,60 @@
         </p>
     </div>
     <div class="home-image-box">
-        <a href="/about-us"><img class="home-image" src="images/about-us-croppped.png"></a>
-        <a href="/our-team"><img class="home-image" src="images/our-team-cropped.png"></a>
-        <a href="/offerings"><img class="home-image" src="images/our-offering-cropped.png"></a>
+        <div class="home-image">
+            <img src="icons/icon-recycling.png">
+            <p>
+                OVER
+            </p>
+            <h3>
+                20,000
+            </h3>
+            <p>
+                CYCLES
+            </p>
+        </div>
+        <div class="home-image">
+            <img src="icons/icon-battery.png">
+            <p>
+                BETWEEN
+            </p>
+            <h3>
+                4-10 HRS
+            </h3>
+            <p>
+                OF ENERGY STORAGE
+            </p>
+        </div>
+        <div class="home-image">
+            <img src="icons/icon-plant.png">
+            <p>
+                COMPLETELY
+            </p>
+            <h3>
+                SUSTAINABLE
+            </h3>
+            <p>
+                100% RECYCLABLE
+            </p>
+        </div>
+        <div class="home-image">
+            <img src="icons/icon-calendar.png">
+            <p>
+                OVER
+            </p>
+            <h3>
+                25 YEARS
+            </h3>
+            <p>
+                OPERATING LIFE
+            </p>
+        </div>
     </div>
 </main>
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Inc"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
@@ -98,7 +143,7 @@
                 </div>
                 <div class="icon-row">
                     <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@swordandstone.com.au</p>
+                    <p class="ml-2">info@essinc.com.au</p>
                 </div>
             </div>
         </div>
@@ -106,7 +151,7 @@
     <section class="footer-background">
         <div class="footer navbar-expand-lg navbar">
             <span class="mr-auto">&copy; 2021 All rights reserved.</span>
-            <a class="footer-icon-container" href="https://twitter.com/swordandstone1">
+            <a class="footer-icon-container" href="https://twitter.com/ess_info">
                 <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png">
             </a>
         </div>
