--- a/history.html
+++ b/history.html
@@ -55,61 +55,32 @@
 <main class="content-block history">
     <div class="text-column">
         <h1>
-            BATTERY VALUE CREATION MODELLING
+            HISTORY
         </h1>
         <p>
-            Analysis of value creation potential of alternative battery technologies, considering full life cycle cost
-            factors, technical attributes and market or bilateral revenue capture. By modelled specific use cases, S&S
-            identifies optimal long term battery economics and value stacking potential.
+            Established in 2011, ESS Inc. manufactures low-cost, long-duration iron flow batteries for commercial and
+            utility-scale energy storage applications requiring 6+ hours of flexible energy capacity. Our long-duration
+            energy storage platforms, the Energy WarehouseTM (EW) and Energy Center (EC), use iron, salt, and water for
+            the electrolyte, and deliver an environmentally safe, long-life energy storage solution for the world's
+            renewable energy infrastructure.
         </p>
         <p>
-            We actively monitor various information sources that can help predict energy prices, demands and supply.
-            This information is secured in a data warehouse that allows fast and adaptive modelling and back testing of
-            various battery storage enabled energy trading solutions.
-        </p>
-    </div>
-    <div class="text-column">
-        <h1>
-            BATTERY SUPPLY, INSTALLATION AND ONGOING ASSET MANAGEMENT
-        </h1>
-        <p>
-            We can source the preferred battery technology for certain key use cases and arrange installation for behind
-            the meter or in front of the meter applications. Battery asset management to ensure ongoing effective
-            operation can also be arranged.
+            Based in Wilsonville, Oregon, ESS Inc. was founded by a team with deep experience in fuel cells,
+            electrochemistry, advanced material science and renewable energy. After five years of intensive innovation,
+            engineering development and rigorous testing and validation, with the backing of ARPA-E and others, the
+            company began shipping turnkey energy storage solutions that allowed companies and municipalities to control
+            their own energy future in 2015.
         </p>
         <p>
-            We also track, report and control live battery systems to maximise their utility and profitability.
-        </p>
-    </div>
-    <div class="text-column">
-        <h1>
-            BATTERY AS A SERVICE
-        </h1>
-        <p>
-            To simplify asset ownership and battery optimisation, we can deliver pre-defined storage solutions for
-            customers where we own and operate the battery. To allow customers to avoid capital outlay for the battery
-            while benefiting from incremental battery value stacking without assuming the operational risk.
+            Our technology delivers environmental and cost advantages. Specifically, our non-corrosive, non-toxic
+            chemistry enables use of off-the-shelf materials. Its non-flammable composition eliminates costly fire
+            suppression systems. Combined with an innovative cell design, our customers benefit from increased power
+            density and reduced O&M cost over our platform's 20+ year lifespan.
         </p>
         <p>
-            We offer installation on the customer site of a battery which is owned and operated by S&S to deliver the
-            required storage services at a set fee, with S&S utilizing the battery to meet broader market needs. These
-            arrangements are developed in partnership with the customer to effectively deliver on the customer's storage
-            requirements while reducing cost of storage by allowing S&S to effectively utilizing the remaining battery
-            capacity.
-        </p>
-        <p>
-            Battery as a Service provides asset investors an opportunity to invest directly in the transition to
-            renewables by owning storage assets critical to enabling greater penetration of renewable generation and
-            which support increased grid stability.
-        </p>
-    </div>
-    <div class="text-column">
-        <h1>
-            PREDICTIVE MARKET MODELLING
-        </h1>
-        <p>
-            Using various algorithm-based approaches, we continuously refine our models to maximise battery performance
-            and profitability. With efficient and reliable back testing, we can simulate months or real-time trading.
+            With its safe, earth-abundant, proven all-iron flow battery technology, ESS is helping project developers,
+            utilities, and EPCs make the transition to more flexible non-lithium-ion storage that is better suited for
+            the grid and the environment.
         </p>
     </div>
 </main>
