--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     About Us
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item btn btn-sub" href="/">History</a>
+                    <a class="dropdown-item btn btn-sub" href="/history">History</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/">AU Team</a>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">AU Team</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/">US Team</a>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item btn btn-sub" href="/">Investors</a>
                 </div>
