--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/jquery.main.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" href="/favicon.png">
 </head>
 <body>
 
@@ -43,7 +44,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/">Investors</a>
+                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
                 </div>
             </li>
             <li class="nav-item">
