--- a/investors.html
+++ b/investors.html
@@ -58,7 +58,46 @@
             INVESTORS
         </h1>
     </div>
-    <div>
+    <div class="home-image-box investor-image-box">
+        <div class="investor-image">
+            <img src="images/logos/sb-energy.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/breakthrough-energy.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/basf.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/element8.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/evergy-ventures.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/gc-ventures.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/ipm.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/onami.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/pangaea.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/portland-seedfund.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/presidio-partners.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/sand-hill-angels.png">
+        </div>
+        <div class="investor-image">
+            <img src="images/logos/cycle-capital.png">
+        </div>
 
     </div>
 </main>
