--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <link rel="icon" href="/favicon.png">
 </head>
 <body>
-
-<!--Image was too low-res-->
 <header class="banner banner-homepage header">
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
@@ -64,7 +62,7 @@
         </h1>
     </div>
     <div class="text-column">
-        <p style="text-align: center">
+        <p style="text-align: justify">
             ESS Inc. provides safe, environmentally sustainable energy storage technologies and services that are
             transforming the industry and accelerating the adoption of renewable energy on a global scale.
         </p>
@@ -75,7 +73,7 @@
         </h1>
     </div>
     <div class="text-column">
-        <p style="text-align: center">
+        <p style="text-align: justify">
             Partnering with Munich RE, we have launched an industry-first insurance coverage for our battery flow
             technology. This world first, innovative policy means that our long-duration storage solutions are now
             baked by a <b>full 10 year performance guarantee</b>, regardless of project size or where it's located.
