--- a/investors.html
+++ b/investors.html
@@ -42,11 +42,11 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/">Investors</a>
+                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn" href="/">Contact</a>
+                <a class="nav-link btn" href="/contact">Contact</a>
             </li>
         </ul>
     </nav>
