--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,130 @@
     <link rel="icon" href="/favicon.png">
 </head>
 <body>
-
+<header class="banner header banner-no-background">
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link btn" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link btn" href="/">Technology</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link btn" href="/">Applications</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link btn" href="/" data-toggle="dropdown">
+                    About Us
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item btn btn-sub" href="/history">History</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">AU Team</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link btn" href="/contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <header class="banner-contact header">
+        <div class="banner-text banner-text-contact">
+            <h1>Contact Us</h1>
+        </div>
+    </header>
+</header>
+<main class="content-block">
+    <img src="images/contact-line.png" style="text-align: center">
+    <div class="text-column" style="padding: 0 0 0 0">
+        <h2 style="text-align: center">
+            OUR CONTACT INFO
+        </h2>
+    </div>
+    <div class="contact-page-info">
+        <div class="contact-page-box">
+            <i class="material-icons" style="color: #71b6d5">room</i>
+            <h2>
+                Address
+            </h2>
+            <p>
+                2/11 Morrison Close,
+            </p>
+            <p>
+                Mansfield 4122
+            </p>
+            <p>
+                Queensland
+            </p>
+        </div>
+        <div class="contact-page-box">
+            <i class="material-icons" style="color: #71b6d5">today</i>
+            <h2>
+                Working Time
+            </h2>
+            <p>
+                Monday - Friday &mdash; 08:00 - 16:00
+            </p>
+            <p>
+                Saturday &mdash; Closed
+            </p>
+            <p>
+                Sunday &mdash; Closed
+            </p>
+        </div>
+        <div class="contact-page-box">
+            <i class="material-icons" style="color: #71b6d5">email</i>
+            <h2>
+                Email
+            </h2>
+            <p>
+                info@essinc.com.au
+            </p>
+        </div>
+    </div>
+    <img src="images/mail-line.png" style="text-align: center">
+    <div class="text-column" style="padding: 0 0 0 0">
+        <h2 style="text-align: center">
+            CONTACT FORM
+        </h2>
+    </div>
+    <form id="contact-form" action="https://formspree.io/f/mwkwadkq" class="contact-form" method="POST">
+    	<input class="contact-form-sub mr-auto contact-area" type="text" name="name" placeholder="Name" required>
+        <input class="contact-form-sub contact-area" type="email" name="_replyto" placeholder="Email" required>
+        <textarea rows="5" class="contact-form-main contact-area" type="text" name="message" id="message" placeholder="Message" required></textarea>
+        <input data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" data-callback='onSubmit' class="g-recaptcha contact-form-main contact-form-btn" type="submit" value="Send">
+    </form>
+</main>
+<footer>
+    <section class="contact">
+        <div class="footer-information">
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Inc"></a>
+            <div class="footer-contacts">
+                <h4 class="contact-text">CONTACT</h4>
+                <div class="icon-row">
+                    <i class="material-icons footer-contact-icon">room</i>
+                    <p class="ml-2">Brisbane, Australia</p>
+                </div>
+                <div class="icon-row">
+                    <i class="material-icons footer-contact-icon">mail</i>
+                    <p class="ml-2">info@essinc.com.au</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer-background">
+        <div class="footer navbar-expand-lg navbar">
+            <span class="mr-auto">&copy; 2021 All rights reserved.</span>
+            <a class="footer-icon-container" href="https://twitter.com/ess_info">
+                <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png">
+            </a>
+        </div>
+    </section>
+</footer>
 </body>
 </html>
