--- a/our-team-aus.html
+++ b/our-team-aus.html
@@ -46,7 +46,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn" href="/">Contact</a>
+                <a class="nav-link btn" href="/contact">Contact</a>
             </li>
         </ul>
     </nav>
