--- a/technology.html
+++ b/technology.html
@@ -26,7 +26,7 @@
                 <a class="nav-link btn" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn" href="/">Technology</a>
+                <a class="nav-link btn" href="/technology">Technology</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Applications</a>
