--- a/our-team-usa.html
+++ b/our-team-usa.html
@@ -29,7 +29,7 @@
                 <a class="nav-link btn" href="/technology">Technology</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn" href="/">Applications</a>
+                <a class="nav-link btn" href="/applications">Applications</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link btn" href="/" data-toggle="dropdown">
