--- a/history.html
+++ b/history.html
@@ -60,7 +60,8 @@
         <p>
             Established in 2011, ESS Inc. manufactures low-cost, long-duration iron flow batteries for commercial and
             utility-scale energy storage applications requiring 6+ hours of flexible energy capacity. Our long-duration
-            energy storage platforms, the Energy WarehouseTM (EW) and Energy Center (EC), use iron, salt, and water for
+            energy storage platforms, the Energy Warehouse&trade; (EW) and Energy Center (EC), use iron, salt, and water
+            for
             the electrolyte, and deliver an environmentally safe, long-life energy storage solution for the world's
             renewable energy infrastructure.
         </p>
