removed typo from redix diagram

--- a/technology.html
+++ b/technology.html
@@ -88,7 +88,7 @@
         <h1 style="text-align: center">
             HOW IT WORKS: A SIMPLE TRANSFER OF ELECTRONS CHANGED EVERYTHING
         </h1>
-        <img src="images/redox.png" style="max-width: 637px;">
+        <img src="images/diagram.jpg" style="max-width: 637px;">
         <p>
             Redox, a contraction of reduction (a gain of electrons) and oxidation (a loss of electrons), is a reaction
             in which electrons are transferred between chemical species. Using the same electrolyte on both the negative
