--- a/applications.html
+++ b/applications.html
@@ -20,7 +20,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -38,11 +38,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item btn btn-sub" href="/history">History</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">AU Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -61,7 +57,7 @@
             HELPING UTILITIES REAP THE REWARDS OF RENEWABLE ENERGY
         </h1>
         <p>
-            At ESS Inc., we're encouraged by the increased amount of renewable energy penetration across the grid. We
+            At ESS Asia Pacific Pty Ltd., we're encouraged by the increased amount of renewable energy penetration across the grid. We
             know that, with wind and solar energy storage deployments growing up to 46% year-over-year, electric
             utilities need alternatives to lithium-ion that are clean, resilient and have long operating lifetimes and
             are not cycle limited. Our iron flow battery solutions, the Energy Warehouse&trade; (EW) and Energy
@@ -73,7 +69,7 @@
             the EW&trade; with a design approach that enables systems to be tailored to meet virtually any project size
             with storage durations ranging up to 16+ hours. Its wide-ranging capabilities can help utilities deal with
             high penetration of intermittent renewables, resiliency requirements and defer major capital expenditures on
-            distribution equipment by time shifting energy. Utilities can easily communicate with ESS Inc's storage
+            distribution equipment by time shifting energy. Utilities can easily communicate with ESS Asia Pacific Pty Ltd's storage
             system solutions installed at end-user sites to dynamically manage customer electricity consumption from the
             grid in response to real-time electricity supplies. Our innovative energy storage solutions also help with
             frequency regulation and other ancillary services and, furthermore, can reduce a utility's dependence on
@@ -89,7 +85,7 @@
         </h1>
         <p>
             Energy is a significant operating expense that needs to be minimized to improve a company's bottom line. At
-            ESS Inc., we believe that proactively addressing this in a sustainable way is just smart business. If you're
+            ESS Asia Pacific Pty Ltd., we believe that proactively addressing this in a sustainable way is just smart business. If you're
             looking to utilize renewable energy to support your brand and lower costs, long-duration energy storage may
             be the solution for you. Whether it is managing the self-supply of intermittent solar or wind energy,
             maximizing savings from existing utility tariffs for demand charges and time-of-use rates, or protecting
@@ -130,7 +126,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Inc"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
@@ -139,7 +135,7 @@
                 </div>
                 <div class="icon-row">
                     <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@essinc.com.au</p>
+                    <p class="ml-2">info@essasiapacific.com</p>
                 </div>
             </div>
         </div>
