--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -44,11 +44,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item btn btn-sub" href="/history">History</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">AU Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -106,7 +102,7 @@
                 Email
             </h2>
             <p>
-                info@essinc.com.au
+                info@essasiapacific.com
             </p>
         </div>
     </div>
@@ -126,7 +122,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Inc"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
@@ -135,7 +131,7 @@
                 </div>
                 <div class="icon-row">
                     <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@essinc.com.au</p>
+                    <p class="ml-2">info@essasiapacific.com</p>
                 </div>
             </div>
         </div>
