--- a/history.html
+++ b/history.html
@@ -20,7 +20,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -38,11 +38,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item btn btn-sub" href="/history">History</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">AU Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -58,7 +54,7 @@
             HISTORY
         </h1>
         <p>
-            Established in 2011, ESS Inc. manufactures low-cost, long-duration iron flow batteries for commercial and
+            Established in 2020, ESS Asia Pacific Pty Ltd. manufactures low-cost, long-duration iron flow batteries for commercial and
             utility-scale energy storage applications requiring 6+ hours of flexible energy capacity. Our long-duration
             energy storage platforms, the Energy Warehouse&trade; (EW) and Energy Center (EC), use iron, salt, and water
             for
@@ -66,11 +62,7 @@
             renewable energy infrastructure.
         </p>
         <p>
-            Based in Wilsonville, Oregon, ESS Inc. was founded by a team with deep experience in fuel cells,
-            electrochemistry, advanced material science and renewable energy. After five years of intensive innovation,
-            engineering development and rigorous testing and validation, with the backing of ARPA-E and others, the
-            company began shipping turnkey energy storage solutions that allowed companies and municipalities to control
-            their own energy future in 2015.
+            Based in Queensland, Australia, we have extensive experience in electricity markets, renewable energy, manufacturing, electrical installations and services and trading in energy markets worldwide. .
         </p>
         <p>
             Our technology delivers environmental and cost advantages. Specifically, our non-corrosive, non-toxic
@@ -88,7 +80,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Inc"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
@@ -97,7 +89,7 @@
                 </div>
                 <div class="icon-row">
                     <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@essinc.com.au</p>
+                    <p class="ml-2">info@essasiapacific.com</p>
                 </div>
             </div>
         </div>
