--- a/our-team-aus.html
+++ b/our-team-aus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Our Team - Australia</title>
+    <title>Our Team</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
@@ -20,7 +20,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -38,11 +38,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item btn btn-sub" href="/history">History</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">AU Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -56,7 +52,7 @@
     <div class="our-team-content">
         <div class="our-team-image-column"></div>
         <div class="text-column our-team-text-column">
-            <h1>AUSTRALIAN TEAM</h1>
+            <h1>TEAM</h1>
         </div>
     </div>
     <div class="our-team-content">
@@ -208,7 +204,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Inc"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
@@ -217,7 +213,7 @@
                 </div>
                 <div class="icon-row">
                     <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@essinc.com.au</p>
+                    <p class="ml-2">info@essasiapacific.com</p>
                 </div>
             </div>
         </div>
