--- a/technology.html
+++ b/technology.html
@@ -20,7 +20,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Inc"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -38,11 +38,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item btn btn-sub" href="/history">History</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">AU Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-usa">US Team</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/investors">Investors</a>
+                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -137,7 +133,7 @@
         <img src="images/graph.png" style="max-width: 1092px">
         <img src="images/table.png" style="max-width: 1121px">
         <p>
-            No other technology can match the advantages of ESS Inc.'s Energy Center&trade; (EC). The EC&trade; leads
+            No other technology can match the advantages of ESS Asia Pacific Pty Ltd.'s Energy Center&trade; (EC). The EC&trade; leads
             competitive technologies in levelised cost of storage (LCOS) and deep charge and discharge cycles. With
             assets including our environmentally friendly electrolyte, 20-plus year system life, turnkey installation
             with no hazmat compliance plan required, and fast electrical response time, users see an improvement in
@@ -150,7 +146,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Inc"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
@@ -159,7 +155,7 @@
                 </div>
                 <div class="icon-row">
                     <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@essinc.com.au</p>
+                    <p class="ml-2">info@essasiapacific.com</p>
                 </div>
             </div>
         </div>
