--- a/email_template.html
+++ b/email_template.html
@@ -31,7 +31,7 @@
                     width: 88px;">
                     <img style="height: 100.00%;
                         min-width: 100%;
-                        width: 100.00%;" src="https://essasiapacific.com/images/ESS_AP_Logo_FA.png" alt="" />
+                        width: 100.00%;" src="https://esiap.com.au/images/ESS_AP_Logo_FA.png" alt="" />
                 </div>
             </div>
         </td>
@@ -42,7 +42,7 @@
                     width: 8px;">
                     <img style="height: 100.00%;
                         min-width: 100%;
-                        width: 100.00%;" src="https://essasiapacific.com/images/ICONS.png" alt="" />
+                        width: 100.00%;" src="https://esiap.com.au/images/ICONS.png" alt="" />
                 </div>
             </div>
         </td>
