--- a/history.html
+++ b/history.html
@@ -20,7 +20,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="icon-row">
                     <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@essasiapacific.com</p>
+                    <p class="ml-2">info@esiap.com.au</p>
                 </div>
             </div>
         </div>
