--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/logo2.png" alt="ESS Asia Pacific Pty Ltd"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESS Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
