--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ESS Asia Pacific Pty Ltd</title>
+    <title>ESI Asia Pacific Pty Ltd</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
@@ -20,7 +20,7 @@
 <body>
 <header class="banner banner-homepage header">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESI Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -59,7 +59,7 @@
     </div>
     <div class="text-column">
         <p style="text-align: justify">
-            ESS Asia Pacific Pty Ltd. provides safe, environmentally sustainable energy storage technologies and services that are
+            ESI Asia Pacific Pty Ltd. provides safe, environmentally sustainable energy storage technologies and services that are
             transforming the industry and accelerating the adoption of renewable energy on a global scale.
         </p>
     </div>
@@ -129,7 +129,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESS Asia Pacific Pty Ltd"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESI Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
