--- a/our-team-aus.html
+++ b/our-team-aus.html
@@ -20,7 +20,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESI Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -191,7 +191,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESS Asia Pacific Pty Ltd"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESI Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
