--- a/technology.html
+++ b/technology.html
@@ -20,7 +20,7 @@
 <body>
 <header class="banner header banner-no-background">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESS Asia Pacific Pty Ltd"></a>
+        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESI Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -133,7 +133,7 @@
         <img src="images/graph.png" style="max-width: 1092px">
         <img src="images/table.png" style="max-width: 1121px">
         <p>
-            No other technology can match the advantages of ESS Asia Pacific Pty Ltd.'s Energy Center&trade; (EC). The EC&trade; leads
+            No other technology can match the advantages of ESI Asia Pacific Pty Ltd.'s Energy Center&trade; (EC). The EC&trade; leads
             competitive technologies in levelised cost of storage (LCOS) and deep charge and discharge cycles. With
             assets including our environmentally friendly electrolyte, 20-plus year system life, turnkey installation
             with no hazmat compliance plan required, and fast electrical response time, users see an improvement in
@@ -146,7 +146,7 @@
 <footer>
     <section class="contact">
         <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESS Asia Pacific Pty Ltd"></a>
+            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESI Asia Pacific Pty Ltd"></a>
             <div class="footer-contacts">
                 <h4 class="contact-text">CONTACT</h4>
                 <div class="icon-row">
