Test update home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <body>
 <header class="banner banner-homepage header">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESI Asia Pacific Pty Ltd"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link btn" href="/">Home</a>
@@ -47,82 +46,26 @@
         </ul>
     </nav>
     <div class="banner-text">
-        <h1>Clean, Sustainable Energy, Guaranteed</h1>
-        <h3>A WORLD LEADING SOLUTION FOR GENERATIONS TO COME</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="images/Home-Logo.png" alt="ESI Asia Pacific Pty Ltd">
+            </div>
+            <div class="col-md-6">
+                <h1>Our renewable<br/>energy future</h2>
+                <h2>- today</h2>
+            </div>
+        </div>
     </div>
 </header>
 <main class="content-block">
-    <div class="text-column">
-        <h1 style="text-align: center">
-            ACCELERATING THE RENEWABLE ENERGY REVOLUTION
-        </h1>
-    </div>
-    <div class="text-column">
-        <p style="text-align: justify">
-            ESI Asia Pacific Pty Ltd. provides safe, environmentally sustainable energy storage technologies and services that are
-            transforming the industry and accelerating the adoption of renewable energy on a global scale.
-        </p>
-    </div>
-    <div class="text-column">
-        <h1 style="text-align: center">
-            ENERGY STORAGE SOLUTIONS YOU CAN BANK ON
-        </h1>
-    </div>
-    <div class="text-column">
-        <p style="text-align: justify">
-            Partnering with Munich RE, we have launched an industry-first insurance coverage for our battery flow
-            technology. This world first, innovative policy means that our long-duration storage solutions are now
-            baked by a <b>full 10 year performance guarantee</b>, regardless of project size or where it's located.
-        </p>
-    </div>
-    <div class="home-image-box">
-        <div class="home-image">
-            <img src="icons/icon-recycling.png">
-            <p>
-                OVER
-            </p>
-            <h3>
-                20,000
-            </h3>
-            <p>
-                CYCLES
-            </p>
+    <div class="row">
+        <div class="col-md-6">
+            <p>We provide reliable and environmentally friendly <strong>renewable energy storage solutions</strong> that are essential for <strong>Australia's transition to a renewable energy future.</strong></p>
+            <p>Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.</p>
+            <p>By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.</p>
         </div>
-        <div class="home-image">
-            <img src="icons/icon-battery.png">
-            <p>
-                BETWEEN
-            </p>
-            <h3>
-                4-10 HRS
-            </h3>
-            <p>
-                OF ENERGY STORAGE
-            </p>
-        </div>
-        <div class="home-image">
-            <img src="icons/icon-plant.png">
-            <p>
-                COMPLETELY
-            </p>
-            <h3>
-                SUSTAINABLE
-            </h3>
-            <p>
-                100% RECYCLABLE
-            </p>
-        </div>
-        <div class="home-image">
-            <img src="icons/icon-calendar.png">
-            <p>
-                OVER
-            </p>
-            <h3>
-                25 YEARS
-            </h3>
-            <p>
-                OPERATING LIFE
-            </p>
+        <div class="col-md-6">
+            <img src="images/Home-Article.jpg"/>
         </div>
     </div>
 </main>
